--- a/style.css
+++ b/style.css
@@ -136,6 +136,20 @@ input[type=radio]:hover + div > img {
     width: auto;
     max-width: 100%;  
 }
+
+@keyframes unfoldIn {
+    0% {
+      transform:scaleY(.005) scaleX(0);
+    }
+    50% {
+      transform:scaleY(.005) scaleX(1);
+    }
+    100% {
+      transform:scaleY(1) scaleX(1);
+    }
+  }
+
+  
 /* most of this is from https://www.w3schools.com/howto/howto_css_modals.asp */ 
 /* The Modal (background) */
 .result {
@@ -156,6 +170,23 @@ input[type=radio]:hover + div > img {
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     width: 80%; /* Could be more or less, depending on screen size */
+    transform:scaleY(.01) scaleX(0);
+    animation:unfoldIn 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+   /* .modal-background {
+        .modal {
+        transform:scale(0);
+        animation: zoomIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+        } */
+    
+    /*&.out {
+        transform:scale(1);
+        animation:unfoldOut 1s .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+        /*.modal-background {
+        .modal {
+            animation: zoomOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+        }
+        }
+    }*/
 }
 .outcome {
     display: flex; 
